<resources>
    <string name="app_name">GamesLibrary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="games">Games</string>
    <string name="characters">Characters</string>
    <string name="missions">Missions</string>
    <string name="objects">Objects</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="hint_game_title">Game Title</string>
    <string name="hint_game_studio">Game Studio</string>
    <string name="hint_character_name">Name</string>
    <string name="playing">Playing</string>
    <string name="hint_character_race">Race</string>
    <string name="hint_character_level">Level</string>
    <string name="title_activity_add_game">Add Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_game_title_exists">Already exist a game with this title</string>
    <string name="error_game_title_empty">The game title is empty</string>
    <string name="error_game_studio_empty">Game studio is empty</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mission_title">Title</string>
    <string name="mission_description">Description</string>
    <string name="mission_score">Score</string>
    <string name="completed">Completed</string>

    <array name="sort_by">
        <item>Name</item>
        <item>Level</item>
    </array>

    <array name="filter_by">
        <item>Playing</item>
    </array>
</resources>
