<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/games" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_missions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/missions" />
        <item
            android:id="@+id/nav_objects"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/objects" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/options" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
